cmake_minimum_required(VERSION 3.21)
project(C___D_S)

set(CMAKE_CXX_STANDARD 14)

add_executable(C___D_S main.cpp GGPractice/Array/array_1.cpp GGPractice/Array/find_tripletsWithzeroSUM.cpp DS_12_Stack/stackMain.cpp DS_12_Stack/stackLinkedList.cpp DS_12_Stack/stackParenthesis.cpp)
add_executable(pointer pointer/Pointer.cpp)
add_executable(con Class/conversionConstructor.cpp)
add_executable(stock personalStockFile/main.cpp)
add_executable(safeArray CSCI381_Class/CSCI381_Project_1/safeArray.cpp)
add_executable(safeArrayTemplate CSCI381_Class/CSCI381_Project_1/safeArrayTemplate.cpp)
add_executable(matrix Matrix/BasicMatrix.cpp)
add_executable(double DS_11_LinkedList/doubleLinkedList/doubleLinkedListMain.cpp)
add_executable(main GGPractice/Array/array_1.cpp GGPractice/Array/find_tripletsWithzeroSUM.cpp)
add_executable(mainCode GGPractice/Array/codingPage.cpp)
add_executable(linkedlist GGPractice/LinkedList/linkedListCode.cpp)
add_executable(stack DS_12_Stack/stackMain.cpp)
add_executable(stackLinkedList DS_12_Stack/stackLinkedList.cpp)
add_executable(stackP DS_12_Stack/stackParenthesis.cpp)