cmake_minimum_required(VERSION 3.21)
project(C___D_S)

set(CMAKE_CXX_STANDARD 14)

add_executable(C___D_S main.cpp GGPractice/Array/array_1.cpp GGPractice/Array/find_tripletsWithzeroSUM.cpp DS_12_Stack/stackMain.cpp DS_12_Stack/stackLinkedList.cpp DS_12_Stack/stackParenthesis.cpp DS_12_Stack/stackInfix_Postfix.cpp DS_12_Stack/stackEvalPostFix.cpp)
add_executable(pointer pointer/Pointer.cpp)
add_executable(con Class/conversionConstructor.cpp)
add_executable(stock personalStockFile/main.cpp)
add_executable(safeArray CSCI381_Class/CSCI381_Project_1/safeArray.cpp)
add_executable(safeArrayTemplate CSCI381_Class/CSCI381_Project_1/safeArrayTemplate.cpp)
add_executable(matrix Matrix/BasicMatrix.cpp)
add_executable(double DS_11_LinkedList/doubleLinkedList/doubleLinkedListMain.cpp)
add_executable(main GGPractice/Array/array_1.cpp GGPractice/Array/find_tripletsWithzeroSUM.cpp)
add_executable(mainCode GGPractice/Array/codingPage.cpp)
add_executable(linkedlist GGPractice/LinkedList/linkedListCode.cpp GGPractice/LinkedList/nthNodeFromEndOfLinkedList.cpp GGPractice/LinkedList/FindingMiddleElement.cpp GGPractice/LinkedList/1_mainCode.cpp GGPractice/LinkedList/reverseALInkedList.cpp)
add_executable(stack DS_12_Stack/stackMain.cpp)
add_executable(stackLinkedList DS_12_Stack/stackLinkedList.cpp)
add_executable(stackP DS_12_Stack/stackParenthesis.cpp)
add_executable(linearLinkedList DS_11_LinkedList/LinkedList/introLinkedList.cpp)
add_executable(linkCode GGPractice/LinkedList/1_mainCode.cpp)
add_executable(infix_postfix DS_12_Stack/stackInfix_Postfix.cpp)
add_executable(infix_2 DS_12_Stack/stackInfixSample_2.cpp)
add_executable(stackeval DS_12_Stack/stackEvalPostFix.cpp)